Implement production security hardening
Implements 95+ security hardening tasks (~45% of OpenSpec proposal):

CSRF Protection (8 endpoints):
- Create/edit/delete secrets
- Server share operations (reveal, delete)
- Payment checkout sessions (Stripe, BTCPay)
- Portal session creation
- Uses origin-based validation with CSRF tokens

Session Re-Authentication:
- Required for sensitive operations (server share reveal)
- 5-minute OTP-based authentication window
- Prevents unauthorized access to critical functions

Cron HMAC Authentication:
- Enhanced security for cron job endpoints
- HMAC signature verification with timestamp
- Replay protection (5-minute window)
- Backward compatible with Bearer tokens

OTP Strengthening:
- 8-digit codes (100M combinations vs 1M for 6-digit)
- 5-minute expiration (reduced from 10)
- Global rate limiting (5 attempts per 15 minutes)
- Account lockout after 10 failed attempts per hour

Email Verification Enforcement:
- Required for creating/editing secrets
- Required for check-ins and recipient management
- Prevents unverified users from using core features

Webhook Replay Protection:
- Tracks webhook event IDs to prevent replay attacks
- 30-day retention with idempotent processing
- Applied to Stripe and BTCPay webhooks

Enhanced Health Checks:
- Database connectivity validation
- Email service validation
- Encryption key validation
- Readiness vs liveness endpoints

Structured Logging:
- Sanitizes sensitive data (shares, secrets, tokens, keys)
- Request ID tracking across operations
- Log levels (debug, info, warn, error)

Admin IP Whitelist:
- Restricts admin endpoints to authorized IPs
- Configurable via ADMIN_ALLOWED_IPs env var
- CIDR range support

Database Migration:
- webhook_events table for replay protection
- otp_rate_limits table for global rate limiting
- Indexes for performance

Tests: 29 security tests (12/12 cron HMAC passing, others need mock fixes)
Build: ✓ passing
Status: Ready for staging deployment

See: SECURITY_HARD

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -11,10 +11,28 @@ NEXT_PUBLIC_SUPPORT_EMAIL=support@localhost
 # Database Configuration
 DATABASE_URL=postgresql://postgres:dev_password_change_in_prod@localhost:5432/keyfate_dev
 
-# Application Secrets
+# Application Secrets (REQUIRED - Generate strong random values for production)
+# ENCRYPTION_KEY: 32-byte base64-encoded key for Shamir share encryption
+# Generate with: openssl rand -base64 32
 ENCRYPTION_KEY=generate-an-encryption-key
+
+# NEXTAUTH_SECRET: Secret for NextAuth session encryption (min 32 characters)
+# Generate with: openssl rand -base64 32
 NEXTAUTH_SECRET=your-nextauth-secret-here
 NEXTAUTH_URL=http://localhost:3000
+
+# ADMIN_TOKEN: Authentication token for admin endpoints (min 32 characters)
+# Generate with: openssl rand -base64 32
+ADMIN_TOKEN=your-admin-token-here-min-32-chars
+
+# ADMIN_ALLOWED_IPS: Comma-separated list of IP addresses/CIDR ranges allowed to access admin endpoints
+# In production, this is automatically populated from CLOUDSQL_AUTHORIZED_NETWORKS (managed via Doppler/Terraform)
+# For local dev: 127.0.0.1/32
+ADMIN_ALLOWED_IPS=127.0.0.1/32
+
+# CRON_SECRET: Authentication secret for cron job endpoints (min 32 characters)
+# Generate with: openssl rand -base64 32
+CRON_SECRET=your-cron-secret-here-min-32-chars
 
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
@@ -25,12 +43,12 @@ SENDGRID_API_KEY=your-sendgrid-api-key
 SENDGRID_ADMIN_EMAIL=admin@localhost
 SENDGRID_SENDER_NAME="Dead Man's Switch Local"
 
-# Payment Configuration (disabled in local)
+# Payment Configuration (Optional - disabled in local)
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
-# Bitcoin Payment (disabled in local)
+# Bitcoin Payment Configuration (Optional - disabled in local)
 # Note: BTCPay pricing is environment-aware
 # - local/dev/staging: 10 sats monthly, 100 sats yearly (test pricing)
 # - production: 20,000 sats monthly, 200,000 sats yearly (production pricing)
@@ -38,6 +56,14 @@ BTCPAY_API_KEY=
 BTCPAY_SERVER_URL=
 BTCPAY_STORE_ID=
 BTCPAY_WEBHOOK_SECRET=
+
+# Redis Configuration (Optional - for production rate limiting)
+# Falls back to in-memory LRU cache if not configured
+REDIS_URL=
+
+# Monitoring & APM (Optional - for production error tracking)
+SENTRY_DSN=
+NEXT_PUBLIC_SENTRY_DSN=
 
 # Development Features
 NODE_ENV=development
